--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Title of the document</title>
   </head>
   <body>
-    <iframe src="dolly.pdf" width="100%" height="1080px">
+    <iframe src="dolly/dolly.pdf" width="100%" height="1080px">
     </iframe>
   </body>
 </html>
